# synthterrain

./: AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Code-Of-Conduct.rst  LICENSE  Makefile  README.rst  THIRDPARTYLICENSES.rst  environment.yml  environment_dev.yml  package.xml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: lint.yml  python-test.yml
docs/: conf.py  index.rst  modules.rst  synthterrain.crater.rst  synthterrain.rock.rst  synthterrain.rst
src/python/synthterrain/: __init__.py  cli.py  util.py
src/python/synthterrain/crater/: __init__.py  age.py  cli.py  cli_convert.py  cli_plot.py  diffusion.py  functions.py  profile.py
src/python/synthterrain/rock/: __init__.py  cli.py  craters.py  disk_filter.csv  functions.py  inter_crater_rocks.py  intra_crater_rocks.py  rocks.py  terrain.py  utilities.py
tests/python/: test_util.py
tests/python/crater/: test_age.py  test_functions.py  test_init.py
