<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>synthterrain</name>
  <version>0.1.0</version>
  <description>
    The synthterrain package is software to support the creation of synthetic terrain on worlds in the solar system.
  </description>
  <maintainer email="ross.a.beyer@nasa.gov">Ross Beyer</maintainer>
  <license>
    Copyright (c) 2022 United States Government as represented by the
    Administrator of the National Aeronautics and Space Administration.
    All Rights Reserved.
</license>

  <depend>python3-shapely</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pandas</depend>
  <depend>python3-scipy</depend>
  <depend>python3-lark-parser</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>