[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "synthterrain"
version = "0.1.0"
# dynamic = ["version", "dependencies"]
dynamic = ["dependencies"]
description = "The synthterrain package is software to support the creation of synthetic terrain in the solar system."
maintainers = [
    {name = "Ross Beyer", email = "Ross.A.Beyer@nasa.gov"}
]
readme = "README.rst"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
]

[project.scripts]
synthcraters = "synthterrain.crater.cli:main"
synthrocks = "synthterrain.rock.cli:main"
synthterrain = "synthterrain.cli:main"
synthcraterplot = "synthterrain.crater.cli_plot:main"
synthcraterconvert = "synthterrain.crater.cli_convert:main"

[project.urls]
Repository = "https://github.com/NeoGeographyToolkit/synthterrain"

[tools.setup.dynamic]
# version = {attr = "synthterrain.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>[a-z]+))?"
serialize = ["{major}.{minor}.{patch}-{release}", "{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.parts.release]
values = ["dev", "released"]
optional_value = "released"

[[tool.bumpversion.files]]
filename = "src/python/synthterrain/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
