[bumpversion]
current_version = 0.1.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize =
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = production
values =
	dev
	production

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/vipersci/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = synthterrain
version = attr:synthterrain.__version__
author = attr:synthterrain.__version__
author_email = rbeyer@seti.org
description = The synthterrain package is software to support the creation of synthetic terrain in the solar system.
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/NeoGeographyToolkit/synthterrain
classifiers =
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Development Status :: 2 - Pre-Alpha
	Natural Language :: English

[options]
include_package_data = True
package_dir = src/python
packages = find:
# python_requires = >=3.7

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
addopts = --ignore=setup.py

[develop]
script_dir=$base/lib/synthterrain

[install]
install_scripts=$base/lib/synthterrain